Fix footer copyright align

--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -23,31 +23,29 @@ footer .spacer {
 .social-medias-container {
   margin: 0 20px;
 }
+.social-medias-container span {
+  font-size: 18px;
+  margin: 5px;
+}
+
 .copyright-container {
   width: 33.3%;
   margin: 0 20px;
+}
+.copyright-container p {
   text-align: right;
+  font-size: 16px;
+  color: #A1A09F;
 }
 
 .footer-item {
   margin: 5px 0;
 }
-
-footer span {
-  font-size: 18px;
-  margin: 5px;
-}
-
-footer a {
+.footer-item a {
   font-size: 16px;
   color: #A1A09F;
   text-decoration: none;
 }
-footer a:hover {
+.footer-item a:hover {
   color: #CECDCD;
-}
-
-footer p {
-  font-size: 16px;
-  color: #A1A09F;
 }
